--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: gh-arc
+name: gh-arc-runners
 description: A Helm chart for github actions runners
 home: https://github.com/Schabo/helm-gh-arc-runners
 type: application
