--- a/values.yaml
+++ b/values.yaml
@@ -76,17 +76,17 @@ gha-runner-scale-set:
   ##
   ## If any customization is required for dind or kubernetes mode, containerMode should remain
   ## empty, and configuration should be applied to the template.
-  # containerMode:
+  containerMode:
   #   type: "dind"  ## type can be set to dind or kubernetes
   #   ## the following is required when containerMode.type=kubernetes
-  #   kubernetesModeWorkVolumeClaim:
-  #     accessModes: ["ReadWriteOnce"]
+    kubernetesModeWorkVolumeClaim:
+      accessModes: ["ReadWriteOnce"]
   #     # For local testing, use https://github.com/openebs/dynamic-localpv-provisioner/blob/develop/docs/quickstart.md to provide dynamic provision volume with storageClassName: openebs-hostpath
-  #     storageClassName: "dynamic-blob-storage"
-  #     resources:
-  #       requests:
-  #         storage: 1Gi
-  #   kubernetesModeServiceAccount:
+      storageClassName: "vsphere-csi"
+      resources:
+        requests:
+          storage: 1Gi
+  #  kubernetesModeServiceAccount:
   #     annotations:
 
   ## listenerTemplate is the PodSpec for each listener Pod
