--- a/values.yaml
+++ b/values.yaml
@@ -77,7 +77,7 @@ gha-runner-scale-set:
   ## If any customization is required for dind or kubernetes mode, containerMode should remain
   ## empty, and configuration should be applied to the template.
   containerMode:
-  #   type: "dind"  ## type can be set to dind or kubernetes
+    type: "kubernetes"  ## type can be set to dind or kubernetes
   #   ## the following is required when containerMode.type=kubernetes
     kubernetesModeWorkVolumeClaim:
       accessModes: ["ReadWriteOnce"]
