--- a/values.yaml
+++ b/values.yaml
@@ -77,15 +77,15 @@ gha-runner-scale-set:
   ## If any customization is required for dind or kubernetes mode, containerMode should remain
   ## empty, and configuration should be applied to the template.
   containerMode:
-    type: "kubernetes"  ## type can be set to dind or kubernetes
+    type: ""  ## type can be set to dind or kubernetes
   #   ## the following is required when containerMode.type=kubernetes
-    kubernetesModeWorkVolumeClaim:
-      accessModes: ["ReadWriteOnce"]
+#    kubernetesModeWorkVolumeClaim:
+#      accessModes: ["ReadWriteOnce"]
   #     # For local testing, use https://github.com/openebs/dynamic-localpv-provisioner/blob/develop/docs/quickstart.md to provide dynamic provision volume with storageClassName: openebs-hostpath
-      storageClassName: "vsphere-csi"
-      resources:
-        requests:
-          storage: 1Gi
+#      storageClassName: "vsphere-csi"
+#      resources:
+#        requests:
+#          storage: 1Gi
   #  kubernetesModeServiceAccount:
   #     annotations:
 
@@ -109,54 +109,6 @@ gha-runner-scale-set:
   ## template is the PodSpec for each runner Pod
   ## For reference: https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#PodSpec
   template:
-    ## template.spec will be modified if you change the container mode
-    ## with containerMode.type=dind, we will populate the template.spec with following pod spec
-    ## template:
-    ##   spec:
-    ##     initContainers:
-    ##     - name: init-dind-externals
-    ##       image: ghcr.io/actions/actions-runner:latest
-    ##       command: ["cp", "-r", "-v", "/home/runner/externals/.", "/home/runner/tmpDir/"]
-    ##       volumeMounts:
-    ##         - name: dind-externals
-    ##           mountPath: /home/runner/tmpDir
-    ##     containers:
-    ##     - name: runner
-    ##       image: ghcr.io/actions/actions-runner:latest
-    ##       command: ["/home/runner/run.sh"]
-    ##       env:
-    ##         - name: DOCKER_HOST
-    ##           value: unix:///var/run/docker.sock
-    ##       volumeMounts:
-    ##         - name: work
-    ##           mountPath: /home/runner/_work
-    ##         - name: dind-sock
-    ##           mountPath: /var/run
-    ##     - name: dind
-    ##       image: docker:dind
-    ##       args:
-    ##         - dockerd
-    ##         - --host=unix:///var/run/docker.sock
-    ##         - --group=$(DOCKER_GROUP_GID)
-    ##       env:
-    ##         - name: DOCKER_GROUP_GID
-    ##           value: "123"
-    ##       securityContext:
-    ##         privileged: true
-    ##       volumeMounts:
-    ##         - name: work
-    ##           mountPath: /home/runner/_work
-    ##         - name: dind-sock
-    ##           mountPath: /var/run
-    ##         - name: dind-externals
-    ##           mountPath: /home/runner/externals
-    ##     volumes:
-    ##     - name: work
-    ##       emptyDir: {}
-    ##     - name: dind-sock
-    ##       emptyDir: {}
-    ##     - name: dind-externals
-    ##       emptyDir: {}
     ######################################################################################################
     ## with containerMode.type=kubernetes, we will populate the template.spec with following pod spec
     ## template:
@@ -188,11 +140,40 @@ gha-runner-scale-set:
     ##                 requests:
     ##                   storage: 1Gi
     spec:
+      initContainers:
+        - name: kube-init
+          image: ghcr.io/actions/actions-runner:latest
+          command: ["sudo", "chown", "-R", "1001:123", "/home/runner/_work"]
+          volumeMounts:
+            - name: work
+              mountPath: /home/runner/_work
+
       containers:
         - name: runner
           image: ghcr.io/actions/actions-runner:latest
           command: ["/home/runner/run.sh"]
-
+          env:
+            - name: ACTIONS_RUNNER_CONTAINER_HOOKS
+              value: /home/runner/k8s/index.js
+            - name: ACTIONS_RUNNER_POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
+              value: "true"
+          volumeMounts:
+            - name: work
+              mountPath: /home/runner/_work
+          volumes:
+            - name: work
+              ephemeral:
+                volumeClaimTemplate:
+                  spec:
+                    accessModes: [ "ReadWriteOnce" ]
+                    storageClassName: "vsphere-csi"
+                    resources:
+                      requests:
+                        storage: 1Gi              
   ## Optional controller service account that needs to have required Role and RoleBinding
   ## to operate this gha-runner-scale-set installation.
   ## The helm chart will try to find the controller deployment and its service account at installation time.
