--- a/values.yaml
+++ b/values.yaml
@@ -9,46 +9,45 @@ gha-runner-scale-set:
 
   # runnerGroup: "default"
 
-  ## name of the runner scale set to create.  Defaults to the helm release name
   runnerScaleSetName: "nomsterrunner"
   containerMode:
-    type: ""
+    type: "dind"
   template:
-    spec:
-      initContainers:
-        - name: kube-init
-          image: ghcr.io/actions/actions-runner:latest
-          command: ["sudo", "chown", "-R", "1001:123", "/home/runner/_work"]
-          volumeMounts:
-            - name: work
-              mountPath: /home/runner/_work
-
-      containers:
-        - name: runner
-          image: ghcr.io/actions/actions-runner:latest
-          command: ["/home/runner/run.sh"]
-          env:
-            - name: ACTIONS_RUNNER_CONTAINER_HOOKS
-              value: /home/runner/k8s/index.js
-            - name: ACTIONS_RUNNER_POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
-              value: "false"
-          volumeMounts:
-            - name: work
-              mountPath: /home/runner/_work
-      volumes:
-        - name: work
-          ephemeral:
-            volumeClaimTemplate:
-              spec:
-                accessModes: [ "ReadWriteOnce" ]
-                storageClassName: "vsphere-csi"
-                resources:
-                  requests:
-                    storage: 5Gi
+#    spec:
+#      initContainers:
+#        - name: kube-init
+#          image: ghcr.io/actions/actions-runner:latest
+#          command: ["sudo", "chown", "-R", "1001:123", "/home/runner/_work"]
+#          volumeMounts:
+#            - name: work
+#              mountPath: /home/runner/_work
+#
+#      containers:
+#        - name: runner
+#          image: ghcr.io/actions/actions-runner:latest
+#          command: ["/home/runner/run.sh"]
+#          env:
+#            - name: ACTIONS_RUNNER_CONTAINER_HOOKS
+#              value: /home/runner/k8s/index.js
+#            - name: ACTIONS_RUNNER_POD_NAME
+#              valueFrom:
+#                fieldRef:
+#                  fieldPath: metadata.name
+#            - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
+#              value: "false"
+#          volumeMounts:
+#            - name: work
+#              mountPath: /home/runner/_work
+#      volumes:
+#        - name: work
+#          ephemeral:
+#            volumeClaimTemplate:
+#              spec:
+#                accessModes: [ "ReadWriteOnce" ]
+#                storageClassName: "vsphere-csi"
+#                resources:
+#                  requests:
+#                    storage: 5Gi
       serviceAccountName: arc-runner
   controllerServiceAccount:
     namespace: arc-systems
