--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,11 +5,10 @@ metadata:
   name: github-arc-runners
   description: github-arc-runners
   annotations:
-    github.com/project-slug: schabo/helm-gh-arc-runners
+    github.com/project-slug: CloudNomster/helm-gh-arc-runners
     argocd/app-name: helm-gh-arc-runners
-    backstage.io/kubernetes-label-selector: 'app=gh-arc-runners'
   links:
-    - url: https://github.com/schabo/helm-gh-arc-runners
+    - url: https://github.com/CloudNomster/helm-gh-arc-runners
       title: Github Actions Runners helm repository
       icon: github
       type: Code
@@ -23,5 +22,5 @@ metadata:
 
 spec:
   type: code
-  owner: schabo
+  owner: group:team-nomster
   lifecycle: testing
