--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,7 +6,7 @@ metadata:
   description: github-arc-runners
   annotations:
     github.com/project-slug: CloudNomster/helm-gh-arc-runners
-    argocd/app-name: helm-gh-arc-runners
+    argocd/app-name: github-arc-runners
   links:
     - url: https://github.com/CloudNomster/helm-gh-arc-runners
       title: Github Actions Runners helm repository
